--- a/graphtheorysketchpad/src/InfoBox.css
+++ b/graphtheorysketchpad/src/InfoBox.css
@@ -1,5 +1,12 @@
 .InfoBox {
-    position: absolute;
-    margin: 2rem;
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 10%;
     padding: 1rem;
-}
+  }
+  
