--- a/graphtheorysketchpad/src/App.css
+++ b/graphtheorysketchpad/src/App.css
@@ -1,7 +1,8 @@
 .App {
   position: fixed;
   display: flex;
+  flex-direction: row; /* Set to 'row' to make it horizontal */
   height: 100%;
   width: 100%;
-  background-color: lightgray;
+  background-color: whitesmoke;
 }
