--- a/graphtheorysketchpad/src/ColorPicker.css
+++ b/graphtheorysketchpad/src/ColorPicker.css
@@ -3,22 +3,20 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; /* Center vertically */
     cursor: pointer;
-    border-radius: 5px;
+    border-radius: 10px;
     padding: 2%;
-    margin-top: 3%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 0.15rem;
+    margin: 5px;
   }
   
   .colorButton {
     width: 100%;
-    height: 40px; /* Adjust the height as needed */
+    height: 75px; /* Adjust the height as needed */
   }
   
   .swatch {
+    margin-bottom: 1rem;
     border-radius: 10px;
     padding: 5%;
     box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), inset 0 0 0 3px #fff;
