--- a/graphtheorysketchpad/src/SideBar.css
+++ b/graphtheorysketchpad/src/SideBar.css
@@ -1,10 +1,14 @@
 .SideBar {
-    height: 100%;
-    width: 15rem;
-    background: gray;
+    display: flex;
+    flex-direction: row;
+    justify-content: center; /* Center the items horizontally */
+    align-items: center; /* Center the items vertically */
+    height: 150px; /* Adjust to 'auto' for dynamic height based on content */
+    width: 100%;
+    background: lightgray;
     border-width: 2px;
     border-right-style: solid;
-    border-right-color: black;
+    border-right-color: solid;
     padding: 1rem;
     flex-shrink: 0;
-}
+  }
